--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 
     <script src="https://unpkg.com/lucide@latest"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LL6ZL7GTSB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LL6ZL7GTSB');
+    </script>
 
 </head>
 
